--- a/assets/css/dashboard/style.css
+++ b/assets/css/dashboard/style.css
@@ -106,7 +106,7 @@ header label{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url(http://localhost/eresta_server/assets/logo/bg-home.png) no-repeat;
+  background: url(http://erestadev.com/assets/logo/bg-home.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -153,7 +153,7 @@ header label{
 }
 
 .about{
-  background:url(http://localhost/eresta_server/assets/logo/bg-about.png) no-repeat;
+  background:url(http://erestadev.com/assets/logo/bg-about.png) no-repeat;
   background-size: cover;
   background-position: center;
   padding-bottom: 3rem;
@@ -196,7 +196,7 @@ header label{
 .newsletter{
   text-align: center;
   padding: 5rem 1rem;
-  background: url(http://localhost/eresta_server/assets/logo/bg-newslatter.png) no-repeat;
+  background: url(http://erestadev.com/assets/logo/bg-newslatter.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -410,7 +410,7 @@ header label{
 
 .footer{
   padding-top: 3rem;
-  background:url(http://localhost/eresta_server/assets/logo/footer-bg.png) no-repeat;
+  background:url(http://erestadev.com/assets/logo/footer-bg.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
